# retinanet-examples

./: history.txt  retina_adverto_readme.md  setup-retina-nx.md
apt_libs/: libc-ares2_1.14.0-1ubuntu0.1_arm64.deb  libev4_1%3a4.22-1_arm64.deb  libmosquitto-dev_1.4.15-2ubuntu0.18.04.3_arm64.deb  libmosquitto1_1.4.15-2ubuntu0.18.04.3_arm64.deb  libmosquittopp-dev_1.4.15-2ubuntu0.18.04.3_arm64.deb  libmosquittopp1_1.4.15-2ubuntu0.18.04.3_arm64.deb  libwebsockets8_2.0.3-3build1_arm64.deb  mosquitto-clients_1.4.15-2ubuntu0.18.04.3_arm64.deb  mosquitto-dev_1.4.15-2ubuntu0.18.04.3_all.deb  mosquitto_1.4.15-2ubuntu0.18.04.3_arm64.deb  nx2.txt
deepstream-updates/: Makefile  deepstream_app.c  deepstream_config_file_parser.c  deepstream_dsexample.c  deepstream_dsexample.h  gstdsexample.cpp
extras/cppapi/: CMakeLists.txt  infercam.cpp  inferlive.cpp  infertxt.cpp  infervideolive.cpp
extras/deepstream/deepstream-sample/: ds_config_1vid.txt  infer_config_batch1.txt  labels_coco.txt
mqttCppExample/: CMakeLists.txt  main.cpp
